client/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100;200;300;400;500&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
	padding: 0;
	margin: 0;
	font-family: Playfair Display, Jost, -apple-system, BlinkMacSystemFont,
		Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
		Helvetica Neue, serif;
	position: relative;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	overflow-x: hidden;
	justify-content: space-between;
	-webkit-box-pack: justify;
}

*,
root {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

@layer base {
	body {
		@apply min-h-screen transition-all bg-red-100 dark:bg-black dark:text-white;
	}

	p {
		@apply p-0 m-0;
	}

	h1 {
		@apply text-3xl font-bold dark:text-white;
	}

	h2 {
		@apply text-2xl font-bold dark:text-white;
	}

	h3 {
		@apply text-xl font-semibold dark:text-white;
	}

	select {
		@apply py-1 text-xl font-semibold;
	}

	ul {
		@apply list-disc;
	}

	ol {
		@apply list-decimal;
	}

	pre {
		font-family: 'JetBrainsMono', monospace;
		padding: 0.75rem 1rem;
	}
}

:root {
	--rsbs-backdrop-bg: rgba(0, 0, 0, 0.6);
	--rsbs-bg: rgb(24, 24, 27);
	--rsbs-handle-bg: hsla(0, 0%, 0%, 0.14);
	--rsbs-max-w: auto;
	--rsbs-ml: env(safe-area-inset-left);
	--rsbs-mr: env(safe-area-inset-right);
	--rsbs-overlay-rounded: 16px;
}

@layer utilities {
	/* width */
	::-webkit-scrollbar {
		width: 5px;
		border-radius: 5px;
	}

	/* Track */
	::-webkit-scrollbar-track {
		background: #f1f1f1;
		border-radius: 10px;
	}

	/* Handle */
	::-webkit-scrollbar-thumb {
		background: #888;
		border-radius: 10px;
	}

	/* Handle on hover */
	::-webkit-scrollbar-thumb:hover {
		background: #555;
	}
}

.ProseMirror p.is-editor-empty:first-child::before {
	content: attr(data-placeholder);
	float: left;
	color: #adb5bd;
	pointer-events: none;
	height: 0;
}

.ProseMirror {
	outline: none;
	min-height: 40vh;
	max-height: calc(100vh - 205px);
	@apply px-5 overflow-x-hidden;
}

@media only screen and (max-width: 600px) {
	.ProseMirror {
		max-height: calc(100vh - 305px);
	}
}

::v-deep .ProseMirror:focus {
	outline: none;
}

